--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -212,8 +212,8 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart add_to_cart_cls" data-value="{{product.id}}"></i></span>
+								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch" id="productAdd1{{product.id}}">
+									<span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}" data-value="{{product.id}}"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
 									<span><i class="ion-ios-heart"></i></span>
@@ -261,8 +261,8 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart add_to_cart_cls" data-value="{{product.id}}"></i></span>
+								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch" id="productAdd1{{product.id}}">
+									<span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}" data-value="{{product.id}}"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
 									<span><i class="ion-ios-heart"></i></span>
@@ -305,8 +305,8 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart add_to_cart_cls" data-value="{{product.id}}"></i></span>
+								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch" id="productAdd1{{product.id}}">
+									<span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}" data-value="{{product.id}}"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
 									<span><i class="ion-ios-heart"></i></span>
@@ -359,29 +359,31 @@
 </div>
 
 <script>
-	 $(document).ready(function(){
-		$(document).on('click', '.add_to_cart_cls', function (e) {
-		e.preventDefault();
-		console.log("Hello");
-		$.ajax({
-			type: 'POST',
-			url: '{% url "cart_add" %}',
-			data: {
-			productid: $(this).data("value"),
-			productqty: 1,
-			// chưa làm được quantity nên mặc định là 1
-			//   productqty: $('#id').text(),
-			csrfmiddlewaretoken: "{{csrf_token}}",
-			action: 'post'
-			},
-			success: function (json) {
-			console.log("Add successfully");
-			// document.getElementById("cart-qty").innerHTML = json.qty
-			},
-			error: function (xhr, errmsg, err) {}
-		});
-    })
-	 });
-	  
+	$(document).ready(function(){
+        $(".jqueryCatch").on('click', function (e) {
+        if(e.target !== e.currentTarget) return;
+        e.preventDefault();
+        var clickElementId = e.target.id;
+        if (clickElementId.includes("productAdd"))
+        {
+          var prodid = clickElementId.replace("productAdd1","");
+          prodid = prodid.replace("productAdd2","");
+          $.ajax({
+          type: 'POST',
+          url: '{% url "cart_add" %}',
+          data: {
+            productid: prodid,
+            productqty: 1,
+            csrfmiddlewaretoken: "{{csrf_token}}",
+            action: 'post'
+          },
+          success: function (json) {
+            console.log("Add successfully");
+          },
+          error: function (xhr, errmsg, err) {}
+        });
+        }
+      })
+    });
 </script>
 {% endblock %}
