Speed up with 1000% performance

--- a/DiChoHo/templates/category.html
+++ b/DiChoHo/templates/category.html
@@ -9,24 +9,14 @@
   <div class="col-lg-12 card-margin">
     <div class="card search-form">
       <div class="card-body p-0">
-        <form id="search-form">
+        <form id="search-form" action="{% url 'search_views' %}" method="get">
           <div class="row">
             <div class="col-12">
               <div class="row no-gutters">
-                <div class="col-lg-3 col-md-3 col-sm-12 p-0">
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Tất cả</option>
-                    <option>Công Nghệ</option>
-                    <option>Đồ Dùng</option>
-                    <option>Hóa Mỹ Phẩm</option>
-                    <option>May Mặc</option>
-                    <option>Tươi sống</option>
-                  </select>
-                </div>
-                <div class="col-lg-8 col-md-6 col-sm-12 p-0">
+                <div class="col-lg-11 col-md-6 col-sm-12 p-0">
                   <input
                     type="text"
-                    placeholder="Search..."
+                    placeholder="Tìm kiếm"
                     class="form-control"
                     id="search"
                     name="search"
@@ -148,13 +138,19 @@
       <div class="col text-center">
         <div class="block-27">
           <ul>
-            <li><a href="#">&lt;</a></li>
-            <li class="active"><span>1</span></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">&gt;</a></li>
+            {% if products.has_previous %}
+            <li><a href="{% url 'shop' %}{{category}}/?page={{products.previous_page_number}}">&lt;</a></li>
+            {% endif %}
+            {% for n in products.paginator.page_range %}
+            {% if products.number == n %}
+            <li class="active"><span>{{n}}</span></li>
+            {% else %}
+            <li><a href="{% url 'shop' %}{{category}}/?page={{n}}">{{n}}</a></li>
+            {% endif %}
+            {% endfor %}
+            {% if products.has_next %}
+            <li><a href="{% url 'shop' %}{{category}}/?page={{products.next_page_number}}">&gt;</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
