--- a/DiChoHo/templates/search.html
+++ b/DiChoHo/templates/search.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Mua Hàng{% endblock %}
+{% block title %}Tìm Kiếm{% endblock %}
 
 {% block menu_shop_class %}active{% endblock %}
 
@@ -46,7 +46,7 @@
         justify-content-center
       ">
       <div class="col-md-9 ftco-animate text-center">
-        <h1 class="mb-0 bread">Sản phẩm</h1>
+        <h1 class="mb-0 bread">Tìm kiếm</h1>
       </div>
     </div>
   </div>
@@ -54,20 +54,8 @@
 
 <section class="ftco-section">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-10 mb-5 text-center">
-        <ul class="product-category">
-          <li><a href="/shop/" class="active">Tất Cả</a></li>
-          <li><a href="/shop/rau-cu/">Rau Củ</a></li>
-          <li><a href="/shop/trai-cay/">Trái Cây</a></li>
-          <li><a href="/shop/thit/">Thịt</a></li>
-          <li><a href="/shop/ca/">Cá</a></li>
-          <li><a href="/shop/do-uong/">Đồ uống</a></li>
-        </ul>
-      </div>
-    </div>
     <div class="row">
-
+      {% if cart|length > 0 %}
       {% for product in products %}
       <div class="col-md-2 col-lg- ftco-animate">
         <div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
@@ -107,24 +95,22 @@
         </div>
       </div>
       {% endfor %}
+      {% else %}
+      <h5 class="mx-auto">Không có sản phẩm nào phù hợp với từ khóa của bạn. Hãy thử lại những từ khóa khác bạn nhé!</h5>
+      {% endif %}
+
     </div>
     <div class="row mt-5">
       <div class="col text-center">
         <div class="block-27">
           <ul>
-            {% if products.has_previous %}
-            <li><a href="{% url 'shop' %}?page={{products.previous_page_number}}">&lt;</a></li>
-            {% endif %}
-            {% for n in products.paginator.page_range %}
-            {% if products.number == n %}
-            <li class="active"><span>{{n}}</span></li>
-            {% else %}
-            <li><a href="{% url 'shop' %}?page={{n}}">{{n}}</a></li>
-            {% endif %}
-            {% endfor %}
-            {% if products.has_next %}
-            <li><a href="{% url 'shop' %}?page={{products.next_page_number}}">&gt;</a></li>
-            {% endif %}
+            <li><a href="#">&lt;</a></li>
+            <li class="active"><span>1</span></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#">&gt;</a></li>
           </ul>
         </div>
       </div>
