--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -10,22 +10,12 @@
 	<div class="col-lg-12 card-margin">
 		<div class="card search-form">
 			<div class="card-body p-0">
-				<form id="search-form">
+				<form id="search-form" action="{% url 'search_views' %}" method="get">
 					<div class="row">
 						<div class="col-12">
 							<div class="row no-gutters">
-								<div class="col-lg-3 col-md-3 col-sm-12 p-0">
-									<select class="form-control" id="exampleFormControlSelect1">
-										<option>Tất cả</option>
-										<option>Công Nghệ</option>
-										<option>Đồ Dùng</option>
-										<option>Hóa Mỹ Phẩm</option>
-										<option>May Mặc</option>
-										<option>Tươi sống</option>
-									</select>
-								</div>
-								<div class="col-lg-8 col-md-6 col-sm-12 p-0">
-									<input type="text" placeholder="Search..." class="form-control" id="search"
+								<div class="col-lg-11 col-md-6 col-sm-12 p-0">
+									<input type="text" placeholder="Tìm kiếm" class="form-control" id="search_input"
 										name="search">
 								</div>
 								<div class="col-lg-1 col-md-3 col-sm-12 p-0">
@@ -198,7 +188,7 @@
 		<div class="row">
 			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
-				<div class="product">
+				<div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
 					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
 							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
@@ -207,7 +197,7 @@
 						<h3><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
-								<p class="price"><span>{{ product.price }}</span></p>
+								<p class="price"><span>{{ product.price }}đ</span></p>
 							</div>
 						</div>
 						<div class="bottom-area d-flex px-3">
@@ -247,7 +237,7 @@
 		<div class="row">
 			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
-				<div class="product">
+				<div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
 					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
 							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
@@ -291,7 +281,7 @@
 		<div class="row">
 			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
-				<div class="product">
+				<div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
 					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
 							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
@@ -300,7 +290,7 @@
 						<h3><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
-								<p class="price"><span>{{ product.price }}</span></p>
+								<p class="price"><span>{{ product.price }}đ</span></p>
 							</div>
 						</div>
 						<div class="bottom-area d-flex px-3">
