--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -25,6 +25,7 @@
 
 	<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css' %}">
 	<link rel="stylesheet" href="{% static 'css/jquery.timepicker.css' %}">
+	<link rel="stylesheet" href="{% static 'css/404style.css' %}">
 	
 
 
