--- a/DiChoHo/templates/search.html
+++ b/DiChoHo/templates/search.html
@@ -55,7 +55,7 @@
 <section class="ftco-section">
   <div class="container">
     <div class="row">
-      {% if cart|length > 0 %}
+      {% if products|length > 0 %}
       {% for product in products %}
       <div class="col-md-2 col-lg- ftco-animate">
         <div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
