--- a/DiChoHo/templates/404.html
+++ b/DiChoHo/templates/404.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Về Chúng Tôi{% endblock %}
+{% block title %}Lỗi{% endblock %}
 
 {% block menu_about_class %}active{% endblock %}
 
