--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
 	<link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/404style.css' %}">
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
        
