--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -89,7 +89,7 @@
 		<div class="row">
 			{% for relative_product in relative_products %}
 			<div class="col-md-6 col-lg-3 ftco-animate">
-				<div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 350px;">
+				<div class="product bg-white" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 350px;">
 					<a href="{{ relative_product.get_absolute_url }}" class="img-prod"><img class="img-fluid" src="{{ relative_product.image.url | slice:"10:" }}"
 							alt="anh-san-pham">
 
