--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -70,7 +70,7 @@
 
       {% for product in products %}
       <div class="col-md-2 col-lg- ftco-animate">
-        <div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
+        <div class="product bg-white" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
           <a href="{{ product.get_absolute_url }}" class="img-prod">
             <img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="Colorlib Template" />
             <div class="overlay"></div>
