--- a/DiChoHo/templates/checkout/delivery_choices.html
+++ b/DiChoHo/templates/checkout/delivery_choices.html
@@ -1,14 +1,14 @@
 {% extends "../base.html" %}
 {% load static %}
-{% block title %}Delivery Options{%endblock %}
+{% block title %}Giao hàng{%endblock %}
 {% block content %}
 
-<div class="container">
+<div class="container mt-5">
   <div class="col-12">
-    <h1 class="h2">Delivery Options</h1>
+    <h1 class="h2">Lựa chọn đơn vị giao hàng</h1>
   </div>
   <div class="col-12">
-    <p>Select your delivery options</p>
+    <p>Chọn đơn vị giao hàng mà bạn cảm thấy phù hợp nhất</p>
   </div>
   <hr />
 </div>
@@ -22,24 +22,24 @@
   {% endfor %}
 </div>
 {% endif %}
-  <div class="row g-3">
+  <div class="row justify-content-center g-3">
     {% if deliveryoptions|length == 0 %}
-    <div class="col-12">There are no delivery options <a href="{% url 'home' %}">Shop</a></div>
+    <div class=" ">Không có đơn vị giao hàng nào khả dụng.</div>
     {% else %}
     <div class="col-md-4 col-lg-4 order-md-last p-0 order-3">
       <div class="d-flex bd-highlight ms-0">
-        <div class="p-2 flex-grow-1 bd-highlight">Sub Total:</div>
+        <div class="p-2 flex-grow-1 bd-highlight"></div>
         <div class="p-2 bd-highlight"><span class="fw-bold h5">£</span><span id="sub_total"
             class="fw-bold h5">{{cart.get_subtotal_price}}</span></div>
       </div>
       <div class="d-flex bd-highlight">
-        <div class="p-2 flex-grow-1 bd-highlight">Delivery Cost:</div>
-        <div class="p-2 bd-highlight"><span class="fw-bold h5">£</span><span id="delivery_price"
+        <div class="p-2 flex-grow-1 bd-highlight">Phí giao hàng</div>
+        <div class="p-2 bd-highlight"><span class="fw-bold h5">đ</span><span id="delivery_price"
             class="fw-bold h5">{{cart.get_delivery_price}}</span></div>
       </div>
       <div class="d-flex bd-highlight">
-        <div class="p-2 flex-grow-1 bd-highlight">Total:</div>
-        <div class="p-2 bd-highlight"><span class="fw-bold h5">£</span><span id="total"
+        <div class="p-2 flex-grow-1 bd-highlight">Tổng cộng</div>
+        <div class="p-2 bd-highlight"><span class="fw-bold h5">đ</span><span id="total"
             class="fw-bold h5">{{cart.get_total_price}}</span></div>
       </div>
       <a role="button" href="{% url 'checkout:delivery_address' %}" class="btn btn-success fw-bold w-100"
@@ -60,7 +60,7 @@
           <div class="col-md-9 ps-md-1">
             <div class="card-body p-1">
               <p class="card-text ps-2 mb-1 pt-1 fw-bold">{{option.delivery_name}}</p>
-              <p class="card-text ps-2 pb-3">Your order should be delivered within {{option.delivery_timeframe}}</p>
+              <p class="card-text ps-2 pb-3">Sản phẩm sẽ được giao vào khoảng {{option.delivery_timeframe}}</p>
             </div>
           </div>
           <div class="col-md-1 ps-md-1">
