--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -236,21 +236,21 @@
               <div class="input-password-current" style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
                 <input name="oldPassowrd" type="password" maxlength="50" placeholder="Nhập mật khẩu hiện tại" value="" style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepass">
                 <input type="checkbox" onclick="Toggle()">
-                    <b style="right:0">Show Password</b>
+                    <b style="right:0">Hiện mật khẩu</b>
               </div>
 
               <div class="form-password-new" style="font-size:20px;padding-top:20px">Mật khẩu mới</div>
               <div class="input-password-new" style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
                 <input name="newPassowrd" type="password" maxlength="50" placeholder="Nhập mật khẩu mới" value="" style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepassnew">
                 <input type="checkbox" onclick="Toggle1()" >
-                    <b style="right:0">Show Password</b>
+                    <b style="right:0">Hiện mật khẩu</b>
               </div>
 
               <div class="form-confirm-password" style="font-size:20px;padding-top:20px">Nhập lại mật khẩu mới</div>
               <div class="input-confirm-password" style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
                 <input name="newPassowrd" type="password" maxlength="50" placeholder="Nhập lại mật khẩu mới" value="" style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepassconfirmnew">
                 <input type="checkbox" onclick="Toggle2()">
-                    <b style="right:0">Show Password</b>
+                    <b style="right:0">Hiện mật khẩu</b>
               </div>
               <div class="btn_finish" style="padding-top:20px;">  
               <button type="submit" class="btn-solve" style="color:white;background-color:blue;box-sizing: border-box;width:280px;padding:8px 2px 8px;font-size:20px">Lưu</button>
